force-app/main/default/objects/Quote/fields/Auto_Discount__c.field-meta.xml
<CustomField>
    <fullName>Auto_Discount__c</fullName>
    <formula>IF(Subtotal = 0, 0, ((Subtotal - Total_Cost__c) / Subtotal) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>毛利率%（自动）</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>