force-app/main/default/objects/Quote/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>配送方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自提</fullName>
                <default>true</default>
                <label>自提</label>
            </value>
            <value>
                <fullName>快递</fullName>
            </value>
            <value>
                <fullName>同城配送</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>