force-app/main/default/objects/Quote/fields/Member_Tier__c.field-meta.xml
<CustomField>
    <fullName>Member_Tier__c</fullName>
    <label>会员等级</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>普通</fullName>
                <default>true</default>
                <label>普通</label>
            </value>
            <value>
                <fullName>银卡</fullName>
            </value>
            <value>
                <fullName>金卡</fullName>
            </value>
            <value>
                <fullName>钻石</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>