force-app/main/default/objects/Quote/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <label>促销代码</label>
    <length>40</length>
    <type>Text</type>
</CustomField>