force-app/main/default/objects/Quote/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <label>门店编号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>